--- a/composer.json
+++ b/composer.json
@@ -17,14 +17,14 @@
             "email": "luke@parall.ax",
             "role": "Developer"
         },
-         {
+        {
             "name": "Evitenic",
             "role": "Developer"
         }
     ],
     "require": {
         "php": "^8.1",
-        "filament/filament": "^3.0 | ^4.0",
+        "filament/filament": "^4.0",
         "spatie/laravel-package-tools": "^1.15.0",
         "illuminate/contracts": "^10.0 | ^11.0 | ^12.0"
     },
