--- a/package.json
+++ b/package.json
@@ -8,13 +8,11 @@
         "build": "npm-run-all build:*"
     },
     "devDependencies": {
+        "@tailwindcss/cli": "^4.1.12",
         "esbuild": "^0.25.9",
         "npm-run-all": "^4.1.5",
         "prettier": "^2.7.1",
         "prettier-plugin-tailwindcss": "^0.1.13",
-        "tailwindcss": "^4.0.0"
-    },
-    "dependencies": {
-        "@tailwindcss/cli": "^4.1.12"
+        "tailwindcss": "^4.1.12"
     }
 }
