--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,10 @@
     ],
     "require": {
         "php": "^8.1",
-        "filament/filament": "^3.0 | ^4.0",
+        "filament/filament": "^3.0",
         "spatie/laravel-package-tools": "^1.15.0",
-        "illuminate/contracts": "^10.0 | ^11.0 | ^12.0"
+        "illuminate/contracts": "^10.0 | ^11.0 | ^12.0",
+        "stevebauman/purify": "^6.3"
     },
     "autoload": {
         "psr-4": {
