--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "filament/filament": "^3.0",
         "spatie/laravel-package-tools": "^1.15.0",
         "illuminate/contracts": "^10.0 | ^11.0 | ^12.0",
-        "stevebauman/purify": "^6.3"
+        "stevebauman/purify": "^6.3",
+        "noin/filament-forms-tinyeditor": "^2.2"
     },
     "autoload": {
         "psr-4": {
