--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "php": "^8.1",
         "filament/filament": "^4.0",
         "spatie/laravel-package-tools": "^1.15.0",
-        "illuminate/contracts": "^10.0 | ^11.0 | ^12.0"
+        "illuminate/contracts": "^10.0 | ^11.0 | ^12.0",
+        "noin/filament-forms-tinyeditor": "^2.2"
     },
     "autoload": {
         "psr-4": {
